# Homework_1

task_1/: .command.sh.swp  command.sh
task_2/: CMakeLists.txt  build.sh
task_2/include/ipb_arithmetic/: subtract.hpp
task_2/src/: main.cpp
